--- a/kirka/package.json
+++ b/kirka/package.json
@@ -8,6 +8,8 @@
     "devDependencies": {
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "vite": "^5.0"
     }
 }
